Fix for issues: 1. WMS-7695: Observing setvalidity of undefined console error in a specific scenario 2. WMS-7694: When we have auto complete for the live form in form as a dialog template, then it is getting displayed behind the form

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -162,10 +162,9 @@ html, body {
       outline: none;
     }
   }
-  .dropdown-menu {
+  &.dropdown-menu {
     text-align: left;
-    width: 100%;
-    z-index: 2000; /*Over-write bootstrap style so that search results appear on top of any content*/
+    z-index: 2000 !important; /*Over-write bootstrap style so that search results appear on top of any content*/
     max-height: 200px;
     overflow-y: auto;
     li {
